<resources>
    <string name="app_name">Mobilny ankieter</string>
    <string name="new_survey_button">Nowa ankieta</string>
    <string name="fill_survey_button">Wypełnij ankietę</string>
    <string name="end_filling_button">Zakończ</string>
    <string name="end_and_start_filling_button">Zakończ i wypełnij ponownie</string>
    <string name="back_to_main_button">Wróć do menu</string>
    <string name="reset_password_answer_hint">Odpowiedz na pytanie. Wielkość liter nie ma znaczenia.</string>
    <string name="reset_password_button_text">Resetuj hasło</string>
    <string name="login_hint">Wpisz PESEL</string>
    <string name="login_hello">MOBILNY ANKIETER </string>
    <string name="logging">LOGOWANIE</string>
    <string name="password_hint">Podaj swoje hasło</string>
    <string name="button_login">Zaloguj</string>
    <string name="dont_logout">Nie wylogowuj mnie</string>
    <string name="remember_password">Zapamiętaj hasło</string>
    <string name="forgot_password">"<u>Zapomniałem hasła</u></string>
    <string name="hello_application_text">Witaj w aplikacji\nMobilny Ankieter!</string>
    <string name="create_password_text">Stwórz swoje hasło
        i podaj pytanie pomocnicze. Pytanie posłuży do zresetowania hasła, jeśli je zapomnisz. Jeśli go nie podasz,
    nie będzie można odzyskać zapomnianego hasła!</string>
    <string name="help_question_hint">Podaj pytanie pomocnicze.</string>
    <string name="help_question_answer_hint">Podaj odpowiedź na podane pytanie pomocnicze.</string>
    <string name="register_button_text">Zarejestruj i zaloguj</string>
    <string name="new_password_again_hint">Powtórz hasło</string>
    <string name="survey_title_hint">Podaj tytuł ankiety</string>
    <string name="survey_description_hint">Podaj opis ankiety</string>
    <string name="survey_summary_hint">Podaj tekst końcowy</string>
    <string name="choose_quest_type_dialog_title">Wybierz typ pytania</string>
    <string name="grid_question_row_labels_text">Etykiety wierszy:</string>
    <string name="grid_question_column_labels_text">Etykiety kolumn:</string>
    <string name="question_one_ch_hint">Wpisz pytanie</string>
    <string name="obligatory_check_box">Obowiązkowe </string>
    <string name="hint_text_hint">Wpisz wskazówkę</string>
    <string name="error_text_hint">Wpisz tekst błędu</string>
    <string name="add_answer_hint">Kilknij, aby dodać odpowiedź.</string>
    <string name="answers_List">Odpowiedzi:</string>
    <string name="scale_label">Skala: od</string>
    <string name="scale_to">do</string>
    <string name="scale_label_hint">Etykieta (opcjonalna)</string>
    <string name="save_text">Zapisz</string>
    <string name="constraints">Ograniczenia: </string>
    <string name="number_constraints">liczbowe</string>
    <string name="text_constraints">tekstowe</string>
    <string name="without_constraints">brak</string>
    <string name="min_length_constraint">Minimalna długość: </string>
    <string name="max_length_constraint">Maksymalna długość: </string>
    <string name="regex_constraint">Spełnia wyrażenie regularne: </string>
    <string name="min_value_constraint">Minimalna wartość: </string>
    <string name="max_value_constraint">Maksymalna wartość: </string>
    <string name="must_be_integer_constraint">Liczba całkowita</string>
    <string name="different_from_constraint">Różna od: </string>
    <string name="not_between_constraint">Nie należy do [minWartość, maxWartość]</string>
    <string name="finish_creating_survey">Zakończ tworzenie</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_new_survey">Tworzenie nowej ankiety</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_date_time_question">EditDateTimeQuestion</string>
    <string name="title_activity_edit_scale_question">EditScaleQuestion</string>
    <string name="title_activity_edit_choice_question">EditChoiceQuestion</string>
    <string name="title_activity_edit_text_question">EditTextQuestion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_grid_question">EditGridQuestion</string>
    <string name="title_activity_answer_drop_down_list_question">
        AnswerDropDownListQuestionActivity
    </string>
    <string name="title_activity_choose_survey_to_fill">ChooseSurveyToFillActivity</string>
    <string name="title_activity_answer_one_choice_question">AnswerOneChoiceQuestionActivity
    </string>
    <string name="title_activity_answer_multiple_choice_question">
        AnswerMultipleChoiceQuestionActivity
    </string>
    <string name="title_activity_answer_scale_question">AnswerScaleQuestionActivity</string>
    <string name="title_activity_welcome_filling">WelcomeFillingActivity</string>
    <string name="title_activity_answer_date_question">AnswerDateQuestionActivity</string>
    <string name="title_activity_answer_time_question">AnswerTimeQuestionActivity</string>
    <string name="title_activity_answer_grid_question">AnswerGridQuestionActivity</string>
    <string name="title_activity_answer_short_text_question">AnswerShortTextQuestionActivity
    </string>
    <string name="title_activity_answer_long_text_question">AnswerLongTextQuestionActivity</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_activity_send_surveys_template">"Wyślij szablony "</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_survey_template">Szablony ankiet</string>
    <string name="title_activity_filled_surveys">Wypełnione ankiety</string>
    <string name="title_activity_sending_survey_answers">Wysyłanie wyników ankiet</string>
    <string name="title_activity_check_help_question">Resetowanie hasła</string>
    <string name="title_activity_delete_survey_template">Usuwanie szablonów ankiet</string>
    <string name="title_activity_delete_filled_surveys">Usuwanie wyników ankiet</string>
    <string name="title_activity_make_csv">MakeCsvActivity</string>
    <string name="app_info">Witaj!\n\n
    Korzystasz z wersji testowej aplikacji Mobilny ankieter. Aplikacja ta umożliwia:\n\n
    1) Tworzenie ankiet\n
    2) Wypełnianie ankiet\n
    3) Generowanie wyników w postaci plików .csv\n
    4) Generowanie plików z wynikami oraz stworzonymi ankietami w formacie .json\n\n

    Aplikacja współpracuje z programem komputerowych o takiej samej nazwie stworzonym przez Andrzeja Bohonosa i Adama Mieldzioca.
        Generowanie plików .json służy głównie do komunikacji właśnie z tamtą aplikacją.\n\n

        Ponieważ, Drogi Użytkowniku, korzystasz z wersji testowej mogą się zdarzyć błędy w działaniu aplikacji (chociaż to ryzyko próbowano zminimalizować), dlatego
        bardzo proszę, żeby ewentualne błędny wraz z opisem sytuacji (w miarę dokładnym), w której wystąpiły zgłaszać na adres mailowy: mobilnyankieter.android@interia.pl.
        \n\n
        Bardzo proszę też o wypełnienie ankiety opiniującej niniejszą aplikację mobilną. Znajduje się ona w liście ankiet do wypełnienia. Wyniki proszę przesłać w formacie .csv
        na adres: mobilnyankieter.android@interia.pl.\n\n

        W aplikacji skorzystano z ikon generowanych przez stronę: https://icons8.com/ .\n\n

        Dziękuję za współpracę. Serdecznie pozdrawiam,\n

        autor - Dominik Demski
    </string>
    <string name="creating_survey_start">
        1) <b>Opis ankiety</b> to tekst, który będzie wyświetlany podczas rozpoczęcia wypełniania ankiety.\n\n
        2) <b>Tekst końcowy</b> będzie wyświetlany po wypełnieniu ankiety.
        Jeśli żaden tekst nie zostanie wpisany, domyślnie wyświetli się: <i>Dziękujemy za wypełnienie ankiety!</i>.\n\n
        3) Tytułu, opisu i tekstu końcowego <b>nie będzie można później zmienić</b> w aplikacji mobilnej.
    </string>
    <string name="creating_survey_help">
        1) Wciśnij symbol plusa, aby <b>dodać nowe pytanie</b>. Następnie wybierz jego typ.\n\n
        2) Naciśnij na pytanie, które chcesz <b>edytować</b>.\n\n
        3) Aby <b>usunąć pytanie</b>, naciśnij na nie przez kilka sekund, potwierdź swój wybór.
        Tak samo usuwa się odpowiedzi w pytaniach typu: jednokrotnego i wielokrotnego wyboru, siatka, wybór z listy.\n\n\n
        <b>TYPY PYTAŃ:</b>\n\n
        1) <b>Jednokrotnego wyboru</b>\n\nOdpowiadając, użytkownik zaznacza jedną odpowiedź spośród możliwych.\n\n
        2) <b>Wielokrotnego wyboru</b>\n\nOdpowiadając, użytkownik zaznacza jedną lub więcej odpowiedzi spośród możliwych.\n\n
        3) <b>Skala</b>\n\nUżytkownik odpowiada na pytanie, zaznaczając swój wybór na suwaku (np. <i>Jak bardzo jesteś szczęśliwy, odpowiedz w skali od 1 do 5.</i>\n\n
        4) <b>Siatka</b>\n\nUżytkownik zaznacza odpowiedzi w tabelce.\n\n
        5) <b>Tekstowe</b>\n\nOdpowiedzią na pytanie jest tekst wprowadzony przez użytkownika.\n\n
        6) <b>Wybór z listy</b>\n\nUżytkownik wybiera odpowiedź z rozsuwanej listy możliwych odpowiedzi.\n\n
        7) <b>Data</b>\n\nUżytkownik odpowiada, wybierając odpowiednią datę.\n\n
        8) <b>Godzina</b>\n\nUżytkownik odpowiada, wybierając odpowiednią godzinę.
    </string>
    <string name="survey_templates_help">
        1) Aby <b>wczytać szablony</b> wstaw ich pliki (format .json) do folderu wczytywanieSzablonowAnkiet w folderze niniejszej aplikacji (folder mobilnyankieter) w pamięci urządzenia,
        następnie wciśnij <i>WCZYTAJ SZABLONY</i>.\n\nPomyślnie wczytane <b>pliki zostaną usunięte</b> z folderu wczytywanieSzablonowAnkiet.
    </string>
    <string name="export_survey_templates_help">
        1) Eksportowanie oznacza wygenerowanie pliku o rozszerzeniu json w folderze szablonyAnkiet w folderze niniejszej aplikacji (folder mobilnyankieter) w pamięci urządzenia.
        Wygenerowane pliki można wczytać na innym urządzeniu lub/i w aplikacji komputerowej.\n\n
        <b>Nie wolno zmieniać zawartości wygenerowanych plików!!</b>\n\n
        2) <b>Nazwy</b> wygenerowanych plików <b>mają format</b>: data i godzina wygenerowania (z dokładnością co do milisekundy) nazwa ankiety.json).\n\n
        3) Szablony ankiet, których pliki były już wcześniej generowane na tym urządzeniu zaznaczone są zielonym kolorem, a pozostałe pomarańczowym.
    </string>
    <string name="delete_survey_template_help">
        Wybierz szablon ankiet, który chcesz usunąć z pamięci urządzenia.\n\n
        Pamiętaj, że operacji usuwania po jej zatwierdzeniu <b>nie będzie można cofnąć</b>!!
    </string>
    <string name="export_survey_to_json_help">
        1) Eksportowanie oznacza wygenerowanie pliku o rozszerzeniu json w folderze wynikiAnkiet/json w folderze niniejszej aplikacji (folder mobilnyankieter) w pamięci urządzenia.
        Wygenerowane pliki można wczytać w aplikacji komputerowej.\n\n
        <b>Nie wolno zmieniać zawartości wygenerowanych plików!!</b>\n\n
        2) Można <b>przefiltrować</b> wyświetlane wyniki. Do wyboru są ankiety, których odpowiedzi: były kiedykolwiek wcześniej na tym urządzeniu eksportowane do pliku z rozszerzeniem json (<b>wysłane</b>),
        nie były nigdy wcześniej na tym urządzeniu eksportowane do pliku z rozszerzeniem json (<b>nie wysłane</b>) lub <b>wszyskie</b> - bez względu na status wysłania.\n\n
        3) W nawiasie podano <b>liczbę zebranych odpowiedzi</b> do danego szablonu ankiet spełniających zadany filtr.\n\n
        4) <b>Nazwy</b> wygenerowanych plików <b>mają format</b>: nazwa szablonu ankiet_notSent/sent/all (w zależności, czy wyniki nie były/były/obojętnie wcześniej eksportowane)_data i godzina wygenerowania pliku_answers.json.\n
    </string>
</resources>