<?xml version="1.0" encoding="utf-8"?>
    <ScrollView android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/xxx_light_blue"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_choice_text"
        android:hint="@string/question_one_ch_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_choice_text"
        android:hint="@string/hint_text_hint"
        android:layout_below="@+id/question_choice_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_choice_text"
        android:hint="@string/error_text_hint"
        android:layout_below="@+id/hint_choice_text"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obligatory_check_box"
        android:layout_below="@+id/error_choice_text"
        android:id="@+id/obligatory_choice_checkbox"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/obligatory_choice_checkbox"
        android:layout_marginLeft="5dp"
        android:textSize="25dp"
        android:text="@string/answers_List"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choice_question_linear"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/obligatory_choice_checkbox">

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:layout_below="@id/choice_question_linear"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"

        android:id="@+id/save_choice_question_button"
        />
</RelativeLayout>
</ScrollView>