<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:background="@color/xs_black">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:hint="@string/question_one_ch_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:hint="@string/hint_text_hint"
        android:layout_below="@id/question_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraints"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:layout_below="@+id/hint_text"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:id="@+id/text_constraints"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_constraints"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/constraints_radio_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_constraints"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:id="@+id/number_radio"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_constraints"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:id="@+id/text_radio"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/without_constraints"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            android:id="@+id/nothing_radio"/>
        </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/constraints_relative"
        android:layout_below="@+id/constraints_radio_group"
        android:layout_marginTop="10dp">

        </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obligatory_check_box"
        android:layout_below="@+id/constraints_relative"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:layout_alignParentRight="true"
        android:id="@+id/obligatory_checkbox"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:layout_below="@id/obligatory_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:background="@color/button_color"
        android:id="@+id/save_question_button"/>
</RelativeLayout>
</ScrollView>