<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/xs_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_date_time_text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:hint="@string/question_one_ch_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_date_time_text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:hint="@string/hint_text_hint"
        android:layout_below="@+id/question_date_time_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_date_time_text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text_color"
        android:hint="@string/error_text_hint"
        android:layout_below="@+id/hint_date_time_text"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obligatory_check_box"
        android:layout_below="@+id/error_date_time_text"
        android:layout_alignParentRight="true"
        android:textColor="@color/black"
        android:id="@+id/obligatory_checkbox"
        android:layout_marginRight="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:layout_below="@id/obligatory_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:background="@color/button_color"
        android:id="@+id/add_data_time_question"/>
</RelativeLayout>
    </ScrollView>