<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/xs_black"
    >

    <TextView android:text="@string/login_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/hello_log"
        android:textColor="@color/login_color_text"
        />
    <TextView android:text="@string/logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/hello_log"
        android:textColor="@color/login_color_text"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:id="@+id/linear_login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/user_pesel"
        android:hint="@string/login_hint"
        android:textColorHint="@color/login_color_hint"
        android:textColor="@color/login_color_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/user_password"
        android:hint="@string/password_hint"
        android:textColorHint="@color/login_color_hint"
        android:textColor="@color/login_color_hint"
       />
</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/linear_login"
        android:layout_alignParentRight="true"
        android:text="@string/button_login"
        android:id="@+id/login_button"
        android:background="@color/button_color"/>
</RelativeLayout>
