<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/xs_black"
    tools:context="bohonos.demski.mieldzioc.mobilnyankieter.application.login.Register">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/xs_black"
    tools:context="bohonos.demski.mieldzioc.mobilnyankieter.application.login.Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/login_color_text"
        android:text="@string/hello_application_text"
        android:textSize="35dp"
        android:id="@+id/hello_register_txt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_color_text"
        android:text="@string/create_password_text"
        android:textSize="16dp"
        android:id="@+id/create_password_txt"
        android:layout_below="@+id/hello_register_txt"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/user_new_password"
        android:hint="@string/password_hint"
        android:textColorHint="@color/login_color_hint"
        android:textColor="@color/login_color_hint"
        android:layout_below="@id/create_password_txt"
        />
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/user_new_password_again"
    android:hint="@string/new_password_again_hint"
    android:textColorHint="@color/login_color_hint"
    android:textColor="@color/login_color_hint"
    android:layout_below="@id/user_new_password"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/user_help_question"
        android:hint="@string/help_question_hint"
        android:textColorHint="@color/login_color_hint"
        android:textColor="@color/login_color_hint"
        android:layout_below="@id/user_new_password_again"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/user_help_question_answer"
        android:hint="@string/help_question_answer_hint"
        android:textColorHint="@color/login_color_hint"
        android:textColor="@color/login_color_hint"
        android:layout_below="@id/user_help_question"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/user_help_question_answer"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/register_button_text"
        android:id="@+id/register_button"
        android:background="@color/button_color"/>
</RelativeLayout>
</ScrollView>